syntax = "proto3";
package Fantasy.Network.Message;
// 协议分为:
// ProtoBuf:可以在Outer和Inner文件里使用。
// MemoryPack:可以在Outer和Inner文件里使用。
// Bson:仅支持在Inner文件里使用。
// 使用方式:
// 在message协议上方添加// Protocol+空格+协议名字
// 例如:// Protocol ProtoBuf 或 // Protocol MemoryPack

//注册账号请求
message RegisterAccountRequest // IRequest, RegisterAccountResponse
{
  string account = 1;
  string pass = 2;
}

message RegisterAccountResponse // IResponse
{
  string account = 1;
  string pass = 2;
}



///玩家登录请求
message LoginRequest // IRequest , LoginResponse
{
  string account = 1;
  string pass = 2;
}
message LoginResponse // IResponse
{
  PlayerData selfData = 1;
  repeated PlayerData otherPlayerData = 2;
}
//其他玩家登录广播
message OtherPlayerLoginMessage // IMessage
{
  int64 playerId = 1;
}

//玩家主动退出消息
message LogoutMessage // IMessage
{
  int64 playerId = 1;
}

//当其他玩家退出时广播
message OtherPlayerLogoutMessage // IMessage
{
  int64 playerId = 1;
}

message PlayerData
{
  int64 playerId = 1;
  CSVector3 position = 2;
  CSVector3 renderDir = 3;
}



//状态同步请求
message StateSyncRequest // IRequest , StateSyncResponse
{
  int64 statePackageId = 1;
  stateSyncData stateData = 2;
}

message StateSyncResponse // IResponse
{
  int64 statePackageId = 1;
  stateSyncData stateData = 2;
}

//广播玩家状态数据
message OtherPlayerStateSyncMessage // IMessage
{
  stateSyncData roleData = 1;
}



// 同步玩家状态数据
message stateSyncData
{
  int64 playerId = 1;
  CSVector3 position = 2;
  CSVector3 inputDir = 3;
  int32 playerState = 4;
}

//三维向量 , 传输位置使用
message CSVector3
{
  float x = 1;
  float y = 2;
  float z = 3;
}


